horizontal scroll fixed

--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,10 @@ a:hover {
 
 body {
   margin: 0;
+  padding: 0;
   display: flex;
   /* place-items: center; */
-  width: 100vw;
+  width: 100%;
   min-width: 320px;
   min-height: 100vh;
 }
