--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -8,7 +8,7 @@
   align-items: center;
   gap: 8px;
 
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 @media (min-width: 350px) {
